--- a/.github/workflows/ESET.yml
+++ b/.github/workflows/ESET.yml
@@ -208,12 +208,12 @@ jobs:
           echo "Final content of ${OUTPUT_FILE} (first 20 lines):"
           head -n 20 "${OUTPUT_FILE}"
           
-      - name: Commit and Push Generated Accounts
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: 'feat: Update ESET generated Accounts (${{ github.event_name }})'
-          file_pattern: '${{ env.OUTPUT_FILENAME }} ${{ env.LAST_RUN_DATE_FILE }}'
-          commit_user_name: ESET Security Bot
-          commit_user_email: pr@eset.com
-          commit_options: --signoff
-          # push_options: '--force'
+#      - name: Commit and Push Generated Accounts
+#        uses: stefanzweifel/git-auto-commit-action@v5
+#        with:
+#          commit_message: 'feat: Update ESET generated Accounts (${{ github.event_name }})'
+#          file_pattern: '${{ env.OUTPUT_FILENAME }} ${{ env.LAST_RUN_DATE_FILE }}'
+#          commit_user_name: ESET Security Bot
+#          commit_user_email: pr@eset.com
+#          commit_options: --signoff
+#          # push_options: '--force'
